--- a/css/styles.css
+++ b/css/styles.css
@@ -35,8 +35,8 @@ Colors:
 
 - Backgrounds - light gray #fbfbfb
 - Background - dark blue #153e52
-- Backgrounds navbar, footer - dark gray #113448
-- Buttons, bullets, icons - green #14bf98
+- Backgrounds navbar, footer - dark gray #2b213b
+- Buttons, bullets, icons - green #ff69b4
 - Headings text - black #484a46
 - Body text - gray #787976
 - Body text - light gray #dfe5ec
@@ -48,6 +48,9 @@ Colors:
 /******************************/
 body,
 html {
+	background: url("../images/watercolour2.jpg") no-repeat center fixed;
+	background-size: cover;
+    line-height: 1;
     width: 100%;
 	height: 100%;
 }
@@ -55,6 +58,7 @@ html {
 body, p {
 	color: #787976; 
 	font: 400 1rem/1.5625rem "Open Sans", sans-serif;
+	font-size: 20px;
 }
 
 .p-large {
@@ -68,6 +72,7 @@ body, p {
 .p-heading {
 	margin-bottom: 3.5rem;
 	text-align: center;
+	font-size: 20px;
 }
 
 .li-space-lg li {
@@ -108,6 +113,11 @@ h6 {
 	font: 700 1rem/1.375rem "Montserrat", sans-serif;
 }
 
+i {
+	color: #9672CC;
+	margin-right: 10px;
+}
+
 a {
 	color: #787976;
 	text-decoration: underline;
@@ -119,7 +129,7 @@ a:hover {
 }
 
 a.green {
-	color: #14bf98;
+	color: #ff69b4;
 }
 
 a.white,
@@ -140,16 +150,16 @@ strong {
 }
 
 .section-title {
-	color: #14bf98;
+	color: #ff69b4;
 	font: 500 0.8125rem/1.125rem "Montserrat", sans-serif;
 }
 
 .btn-solid-reg {
 	display: inline-block;
-	padding: 1.1875rem 1.875rem 1.1875rem 1.875rem;
-	border: 0.125rem solid #14bf98;
+	padding: 1.1rem;
+	border: 0.125rem solid #ff69b4;
 	border-radius: 0.25rem;
-	background-color: #14bf98;
+	background-color: #ff69b4;
 	color: #fff;
 	font: 700 0.75rem/0 "Montserrat", sans-serif;
 	text-decoration: none;
@@ -158,16 +168,16 @@ strong {
 
 .btn-solid-reg:hover {
 	background-color: transparent;
-	color: #14bf98;
+	color: #ff69b4;
 	text-decoration: none;
 }
 
 .btn-solid-lg {
 	display: inline-block;
 	padding: 1.375rem 2.125rem 1.375rem 2.125rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid #ff69b4;
 	border-radius: 0.25rem;
-	background-color: #14bf98;
+	background-color: #ff69b4;
 	color: #fff;
 	font: 700 0.75rem/0 "Montserrat", sans-serif;
 	text-decoration: none;
@@ -176,13 +186,13 @@ strong {
 
 .btn-solid-lg:hover {
 	background-color: transparent;
-	color: #14bf98;
+	color: #ff69b4;
 	text-decoration: none;
 }
 
 .btn-outline-reg {
 	display: inline-block;
-	padding: 1.1875rem 1.875rem 1.1875rem 1.875rem;
+	padding: 1.1rem;
 	border: 0.125rem solid #787976;
 	border-radius: 0.25rem;
 	background-color: transparent;
@@ -377,9 +387,9 @@ input[type='checkbox'] {
 	display: inline-block;
 	width: 100%;
 	height: 3.125rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid #ff69b4;
 	border-radius: 0.25rem;
-	background-color: #14bf98;
+	background-color: #ff69b4;
 	color: #fff;
 	font: 700 0.75rem/1.75rem "Montserrat", sans-serif;
 	cursor: pointer;
@@ -388,7 +398,7 @@ input[type='checkbox'] {
 
 .form-control-submit-button:hover {
 	background-color: transparent;
-	color: #14bf98;
+	color: #ff69b4;
 }
 
 /* Form Success And Error Message Formatting */
@@ -587,7 +597,7 @@ input[type='checkbox'] {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background: #113448;
+	background: #2b213b;
 }
 
 .spinner {
@@ -644,7 +654,7 @@ input[type='checkbox'] {
 .navbar-custom {
 	padding-top: 0.375rem;
 	padding-bottom: 0.375rem;
-	background-color: #113448;
+	background-color: #2b213b;
 	box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
 	font: 600 0.875rem/0.875rem "Open Sans", sans-serif;
 	transition: all 0.2s;
@@ -682,7 +692,7 @@ input[type='checkbox'] {
 
 .navbar-custom .nav-item .nav-link:hover,
 .navbar-custom .nav-item .nav-link.active {
-	color: #14bf98;
+	color: #ff69b4;
 }
 
 /* Dropdown Menu */
@@ -710,7 +720,7 @@ input[type='checkbox'] {
 	margin-top: 0;
 	border: none;
 	border-radius: 0.25rem;
-	background-color: #113448;
+	background-color: #2b213b;
 }
 
 .navbar-custom .dropdown-item {
@@ -719,7 +729,7 @@ input[type='checkbox'] {
 }
 
 .navbar-custom .dropdown-item:hover {
-	background-color: #113448;
+	background-color: #57535e;
 }
 
 .navbar-custom .dropdown-item .item-text {
@@ -727,7 +737,7 @@ input[type='checkbox'] {
 }
 
 .navbar-custom .dropdown-item:hover .item-text {
-	color: #14bf98;
+	color: #ff69b4;
 }
 
 .navbar-custom .dropdown-items-divide-hr {
@@ -774,6 +784,7 @@ input[type='checkbox'] {
 .header {
 	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/header-background.jpg') center center no-repeat;
 	background-size: cover;
+	height: 100%
 }
 
 .header .header-content {
@@ -806,8 +817,8 @@ input[type='checkbox'] {
 /*     05. Intro     */
 /*********************/
 .basic-1 {
-	padding-top: 6.5rem;
-	padding-bottom: 3rem;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 }
 
 .basic-1 .text-container {
@@ -827,7 +838,7 @@ input[type='checkbox'] {
 }
 
 /* Hover Animation */
-.basic-1 .image-container {
+/* .basic-1 .image-container {
 	overflow: hidden;
 	border-radius: 0.25rem;
 }
@@ -889,7 +900,7 @@ input[type='checkbox'] {
 
 .cards-1 .card-title {
 	margin-bottom: 0.625rem;
-}
+} */
 
 
 /************************/
@@ -940,7 +951,7 @@ input[type='checkbox'] {
 }
 
 .cards-2 .list-unstyled .fas {
-	color: #14bf98;
+	color: #ff69b4;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -957,7 +968,7 @@ input[type='checkbox'] {
 }
 
 .cards-2 .price span {
-	color: #14bf98;
+	color: #ff69b4;
 }
 
 .cards-2 .button-container {
@@ -1005,9 +1016,9 @@ input[type='checkbox'] {
 	width: 2.25rem;
 	height: 2.25rem;
 	margin-right: 0.875rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid #ff69b4;
 	border-radius: 50%;
-	background-color: #14bf98;
+	background-color: #ff69b4;
 	color: #fff;
 	font: 700 1rem/2.125rem "Montserrat", sans-serif;
 	text-align: center;
@@ -1023,8 +1034,8 @@ input[type='checkbox'] {
 }
 
 .accordion .item:hover span[aria-expanded="false"] .circle-numbering {
-	border: 0.125rem solid #14bf98;
-	color: #14bf98;
+	border: 0.125rem solid #ff69b4;
+	color: #ff69b4;
 }
 
 .accordion .accordion-title {
@@ -1040,11 +1051,11 @@ input[type='checkbox'] {
 }
 
 .accordion .item:hover .accordion-title {
-	color: #14bf98;
+	color: #ff69b4;
 }
 
 .accordion span[aria-expanded="true"] .accordion-title {
-	color: #14bf98;
+	color: #ff69b4;
 }
 
 .accordion .accordion-body {
@@ -1083,7 +1094,7 @@ input[type='checkbox'] {
 
 .tabs .nav-link:hover,
 .tabs .nav-link.active {
-	color: #14bf98;
+	color: #ff69b4;
 }
 
 .tabs .nav-link .fas {
@@ -1113,7 +1124,7 @@ input[type='checkbox'] {
 	display: block;
 	padding-left: 1.5rem;
 	border-radius: 0.125rem;
-	background: linear-gradient(to bottom right, #14bf98, #1bd1a7);
+	background: linear-gradient(to bottom right, #ff69b4, #1bd1a7);
 }
 
 .tabs #tab-1 .progress-bar.first {
@@ -1139,7 +1150,7 @@ input[type='checkbox'] {
 }
 
 .tabs #tab-2 .list-unstyled .media-bullet {
-	color: #14bf98;
+	color: #ff69b4;
 	font-weight: 600;
 	font-size: 2rem;
 	line-height: 2rem;
@@ -1150,7 +1161,7 @@ input[type='checkbox'] {
 }
 
 .tabs #tab-3 .list-unstyled .fas {
-	color: #14bf98;
+	color: #ff69b4;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1224,7 +1235,7 @@ input[type='checkbox'] {
 	margin-right: auto;
 	margin-bottom: 0.25rem;
 	margin-left: auto;
-	border-radius: 50%;
+	/* border-radius: 50%; */
 }
 
 .slider .card .card-body {
@@ -1263,7 +1274,7 @@ input[type='checkbox'] {
 }
 
 .form-1 .list-unstyled .fas {
-	color: #14bf98;
+	color: #ff69b4;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1348,12 +1359,12 @@ input[type='checkbox'] {
 }
 
 .filter .button-group a:hover {
-	background-color: #14bf98;
+	background-color: #ff69b4;
 	color: #fff;
 }
 
 .filter .button-group a.button.is-checked {
-	background-color: #14bf98;
+	background-color: #ff69b4;
 	color: #fff;
 }
 
@@ -1429,13 +1440,13 @@ input[type='checkbox'] {
 }
 
 .lightbox-basic .line-heading {
-	width: 3rem;
+	/* width: 3rem; */
 	height: 1px;
 	margin-top: 0;
 	margin-bottom: 0.625rem;
 	margin-left: 0;
 	border: none;
-	background-color: #14bf98;
+	background-color: #ff69b4;
 }
 
 .lightbox-basic h6 {
@@ -1566,7 +1577,7 @@ input[type='checkbox'] {
 }
 
 .basic-2 .fa-stack:hover .fa-stack-1x {
-	color: #14bf98;
+	color: #ff69b4;
 }
 
 
@@ -1599,7 +1610,7 @@ input[type='checkbox'] {
 }
 
 .counter .list-unstyled .fas {
-	color: #14bf98;
+	color: #ff69b4;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1621,7 +1632,7 @@ input[type='checkbox'] {
 .counter #counter .counter-value {
 	display: inline-block;
 	margin-bottom: 0.125rem;
-	color: #14bf98;
+	color: #ff69b4;
 	font: 700 2.875rem/3.25rem "Montserrat", sans-serif;
 	vertical-align: middle;
 }
@@ -1666,7 +1677,7 @@ input[type='checkbox'] {
 .form-2 .list-unstyled .fab {
 	margin-right: 0.5rem;
 	font-size: 0.875rem;
-	color: #14bf98;
+	color: #ff69b4;
 }
 
 .form-2 .list-unstyled .fa-phone {
@@ -1707,7 +1718,7 @@ input[type='checkbox'] {
 }
 
 .form-2 .fa-stack:hover .fa-stack-1x {
-	color: #14bf98;
+	color: #ff69b4;
 }
 
 
@@ -1716,7 +1727,7 @@ input[type='checkbox'] {
 /**********************/
 .footer {
 	padding-top: 5rem;
-	background-color: #113448;
+	background-color: #2b213b;
 }
 
 .footer .text-container {
@@ -1741,7 +1752,7 @@ input[type='checkbox'] {
 .copyright {
 	padding-top: 1rem;
 	padding-bottom: 0.5rem;
-	background-color: #113448;
+	background-color: #2b213b;
 	text-align: center;
 }
 
@@ -1764,7 +1775,7 @@ a.back-to-top {
 	width: 2.625rem;
 	height: 2.625rem;
 	border-radius: 1.875rem;
-	background: #14bf98 url("../images/up-arrow.png") no-repeat center 47%;
+	background: #ff69b4 url("../images/up-arrow.png") no-repeat center 47%;
 	background-size: 1.125rem 1.125rem;
 	text-indent: -9999px;
 }
@@ -1821,7 +1832,7 @@ a:hover.back-to-top {
 }
 
 .ex-basic-2 .list-unstyled .fas {
-	color: #14bf98;
+	color: #ff69b4;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1841,8 +1852,47 @@ a:hover.back-to-top {
 
 /*****************************/
 /*     21. Media Queries     */
-/*****************************/	
+/*****************************/
 /* Min-width width 768px */
+@media (max-width: 425px) {
+
+	h1 {
+		font-size: 36px;
+	}
+
+	h3 {
+		font-size: 17px;
+	}
+
+	.fa-stack {
+		height: 40px;
+		width: 40px;
+	}
+
+	.logo-image {
+		display: none;
+	}
+	
+	.logo-text {
+		margin-left: 1.2rem;
+	}
+
+	.navbar-brand.navbar-brand.logo-text {
+		font-size: 15px;
+	}
+
+	.navbar-custom {
+		padding: .25rem;
+		box-shadow: none;
+        background: #2b213b;
+	}
+
+	.text-container > p {
+		font-size: 15px;
+	}
+
+}
+
 @media (min-width: 768px) {
 	
 	/* General Styles */
@@ -1853,6 +1903,9 @@ a:hover.back-to-top {
 	}
 	/* end of general styles */
 
+	.navbar-brand.navbar-brand.logo-text {
+		font-size: 20px;
+	}
 
 	/* Navigation */
 	.navbar-custom {
@@ -1876,13 +1929,13 @@ a:hover.back-to-top {
 	
 	.navbar-custom .nav-item .nav-link:hover,
 	.navbar-custom .nav-item .nav-link.active {
-		color: #14bf98;
+		color: #ff69b4;
 	}
 
 	.navbar-custom.top-nav-collapse {
         padding: 0.375rem 1.5rem 0.375rem 2rem;
 		box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
-		background-color: #113448;
+		background-color: #2b213b;
 	}
 
 	.navbar-custom.top-nav-collapse .navbar-brand.logo-text {
@@ -1895,7 +1948,7 @@ a:hover.back-to-top {
 	
 	.navbar-custom.top-nav-collapse .nav-item .nav-link:hover,
 	.navbar-custom.top-nav-collapse .nav-item .nav-link.active {
-		color: #14bf98;
+		color: #ff69b4;
 	}
 
 	.navbar-custom .dropdown-menu {
@@ -2067,7 +2120,7 @@ a:hover.back-to-top {
 	}
 
 	.navbar-custom .fa-stack:hover .fa-stack-1x {
-		color: #14bf98;
+		color: #ff69b4;
 	}
 	/* end of navigation */
 
@@ -2086,11 +2139,15 @@ a:hover.back-to-top {
 
 	/* Intro */
 	.basic-1 {
-		padding-top: 6.875rem;
+		padding: 5rem;
 	}
 
 	.basic-1 .text-container {
 		margin-bottom: 0;
+	}
+
+	.img-fluid {
+		margin-left: 150px;
 	}
 	/* end of intro */
 
@@ -2288,8 +2345,7 @@ a:hover.back-to-top {
 
 	/* Intro */
 	.basic-1 .text-container {
-		margin-top: 1.875rem;
-		margin-right: 3rem;
+		margin: 1rem 1rem;
 	}
 	/* end of intro */
 
