--- a/css/styles.css
+++ b/css/styles.css
@@ -13,14 +13,14 @@ Table Of Contents:
 04. Header
 05. Intro
 06. Description
-07. Services
-08. Details 1
-09. Details 2
-10. Testimonials
-11. Call Me
+07. Services - Removed
+08. Details 1 - Removed
+09. Details 2 - Removed
+10. Skills
+11. Call Me - Removed
 12. Projects
 13. Project Lightboxes
-14. Team
+14. Team - Removed
 15. About
 16. Contact
 17. Footer
@@ -839,7 +839,7 @@ input[type='checkbox'] {
 }
 
 /* Hover Animation */
-/* .basic-1 .image-container {
+.basic-1 .image-container {
 	overflow: hidden;
 	border-radius: 0.25rem;
 }
@@ -907,75 +907,8 @@ input[type='checkbox'] {
 /************************/
 /*     07. Services     */
 /************************/
-.cards-2 {
-	padding-top: 6.625rem;	
-	padding-bottom: 1.25rem;	
-	background-color: #fbfbfb;
-}
 
-.cards-2 .section-title {
-	margin-bottom: 0.5rem;
-	text-align: center;
-}
-
-.cards-2 h2 {
-	margin-bottom: 3.25rem;
-	text-align: center;
-}
-
-.cards-2 .card {
-	margin-bottom: 5.625rem;
-	border: none;
-	background-color: transparent;
-}
-
-.cards-2 .card-image img {
-	border-top-left-radius: 0.375rem;
-	border-top-right-radius: 0.375rem;
-}
-
-.cards-2 .card-body {
-	padding: 2.25rem 2rem 2.125rem 2rem;
-	border: 1px solid #ebe8e8;
-	border-bottom-left-radius: 0.375rem;
-	border-bottom-right-radius: 0.375rem;
-	background-color: #fff;
-}
-
-.cards-2 h3 {
-	margin-bottom: 0.75rem;
-	text-align: center;
-}
-
-.cards-2 .list-unstyled {
-	margin-bottom: 1.5rem;
-}
-
-.cards-2 .list-unstyled .fas {
-	color: #ff69b4;
-	font-size: 0.5rem;
-	line-height: 1.375rem;
-}
-
-.cards-2 .list-unstyled .media-body {
-	margin-left: 0.625rem;
-}
-
-.cards-2 .price {
-	margin-bottom: 0.25rem;
-	color: #484a46;
-	font: 700 1rem/1.5rem "Montserrat", sans-serif;
-	text-align: center;
-}
-
-.cards-2 .price span {
-	color: #ff69b4;
-}
-
-.cards-2 .button-container {
-	margin-top: -1.375rem;
-	text-align: center;
-}
+/* SECTION MOSTLY REMOVED */
 
 .cards-2 .btn-solid-reg:hover {
 	background-color: #fff;
@@ -985,206 +918,20 @@ input[type='checkbox'] {
 /*************************/
 /*     08. Details 1     */
 /*************************/
-.accordion .area-1 {
-	height: 27rem;
-	background: url('../images/details-1-background.jpg') center center no-repeat;
-	background-size: cover;
-}
 
-.accordion .accordion-container {
-	max-width: 90%;
-	margin-right: auto;
-	margin-left: auto;
-	padding-top: 6.375rem;
-	padding-bottom: 1.5rem;
-}
-
-.accordion h2 {
-	margin-bottom: 1.625rem;
-}
-
-.accordion .item {
-	margin-bottom: 2rem;
-}
-
-.accordion h4 {
-	margin-bottom: 0;
-}
-
-.accordion span[aria-expanded="true"] .circle-numbering,
-.accordion span[aria-expanded="false"] .circle-numbering {
-	display: inline-block;
-	width: 2.25rem;
-	height: 2.25rem;
-	margin-right: 0.875rem;
-	border: 0.125rem solid #ff69b4;
-	border-radius: 50%;
-	background-color: #ff69b4;
-	color: #fff;
-	font: 700 1rem/2.125rem "Montserrat", sans-serif;
-	text-align: center;
-	vertical-align: middle;
-	cursor: pointer;
-	transition: all 0.2s ease;
-}
-
-.accordion span[aria-expanded="false"] .circle-numbering {
-	border: 0.125rem solid #484a46;
-	background-color: transparent;
-	color: #484a46;
-}
-
-.accordion .item:hover span[aria-expanded="false"] .circle-numbering {
-	border: 0.125rem solid #ff69b4;
-	color: #ff69b4;
-}
-
-.accordion .accordion-title {
-	display: inline-block;
-	width: 70%;
-	margin-top: 0.125rem;
-	margin-bottom: 0.25rem;
-	color: #484a46;
-	font: 700 1.25rem/1.75rem "Montserrat", sans-serif;
-	vertical-align: middle;
-	cursor: pointer;
-	transition: all 0.2s ease;
-}
-
-.accordion .item:hover .accordion-title {
-	color: #ff69b4;
-}
-
-.accordion span[aria-expanded="true"] .accordion-title {
-	color: #ff69b4;
-}
-
-.accordion .accordion-body {
-	margin-left: 3.125rem;
-}
+/* SECTION REMOVED */
 
 
 /*************************/
 /*     09. Details 2     */
 /*************************/
-.tabs .tabs-container {
-	max-width: 90%;
-	margin-right: auto;
-	margin-left: auto;
-	padding-top: 2rem;
-	padding-bottom: 5.75rem;
-}
 
-.tabs .nav-tabs {
-	justify-content: center;
-	margin-bottom: 1.125rem;
-	border-bottom: none;
-}
-
-.tabs .nav-link {
-	margin-right: 1.625rem;
-	margin-bottom: 0.875rem;
-	padding: 0;
-	border: none;
-	border-radius: 0.25rem;
-	color: #c1cace;
-	font: 700 1.375rem/1.375rem "Montserrat", sans-serif;
-	text-decoration: none;
-	transition: all 0.2s ease;
-}
-
-.tabs .nav-link:hover,
-.tabs .nav-link.active {
-	color: #ff69b4;
-}
-
-.tabs .nav-link .fas {
-	margin-right: 0.125rem;
-	font-size: 0.875rem;
-	vertical-align: 20%;
-}
-
-.tabs #tab-1 .progress-container {
-	margin-top: 1.5rem;
-}
-
-.tabs #tab-1 .progress-container .title {
-	margin-bottom: 0.25rem;
-	color: #484a46;
-	font: 600 0.875rem/1.25rem "Open Sans", sans-serif;
-}
-
-.tabs #tab-1 .progress {
-	height: 1.375rem;
-	margin-bottom: 1.125rem;
-	border-radius: 0.125rem;
-	background-color: #f9fafc;
-}
-
-.tabs #tab-1 .progress-bar {
-	display: block;
-	padding-left: 1.5rem;
-	border-radius: 0.125rem;
-	background: linear-gradient(to bottom right, #ff69b4, #1bd1a7);
-}
-
-.tabs #tab-1 .progress-bar.first {
-	width: 100%;
-}
-
-.tabs #tab-1 .progress-bar.second {
-	width: 75%;
-}
-
-.tabs #tab-1 .progress-bar.third {
-	width: 90%;
-}
-
-.tabs #tab-2 .list-unstyled {
-	margin-top: 1.75rem;
-	margin-bottom: 0;
-	vertical-align: top;
-}
-
-.tabs #tab-2 .list-unstyled .media {
-	margin-bottom: 2rem;
-}
-
-.tabs #tab-2 .list-unstyled .media-bullet {
-	color: #ff69b4;
-	font-weight: 600;
-	font-size: 2rem;
-	line-height: 2rem;
-}
-
-.tabs #tab-2 .list-unstyled .media-body {
-	margin-left: 0.875rem;
-}
-
-.tabs #tab-3 .list-unstyled .fas {
-	color: #ff69b4;
-	font-size: 0.5rem;
-	line-height: 1.375rem;
-}
-
-.tabs #tab-3 .list-unstyled .media-body {
-	margin-left: 0.625rem;
-}
-
-.tabs #tab-3 .list-unstyled {
-	margin-bottom: 1.75rem;
-}
-
-.tabs .area-2 {
-	height: 27rem;
-	background: url('../images/details-2-background.jpg') center center no-repeat;
-	background-size: cover;
-}
+/* SECTION REMOVED */
 
 
-/****************************/
-/*     10. Testimonials     */
-/****************************/
+/*************************/
+/*     10. Skills        */
+/*************************/
 .slider {
 	padding-top: 6.375rem;
 	padding-bottom: 6.5rem;
@@ -1255,69 +1002,8 @@ input[type='checkbox'] {
 /**********************/
 /*     11. Call Me    */
 /**********************/
-.form-1 {
-	padding-top: 6.625rem;	
-	padding-bottom: 5.625rem;	
-	background-color: #153e52;
-}
 
-.form-1 .text-container {
-	margin-bottom: 4rem;
-}
-
-.form-1 .section-title {
-	margin-bottom: 0.5rem;
-}
-
-.form-1 h2 {
-	margin-bottom: 1.375rem;
-	color: #fff;
-}
-
-.form-1 .list-unstyled .fas {
-	color: #ff69b4;
-	font-size: 0.5rem;
-	line-height: 1.375rem;
-}
-
-.form-1 .list-unstyled .media-body {
-	margin-left: 0.625rem;
-}
-
-.form-1 .label-control {
-	color: #fff;
-}
-
-.form-1 .form-control-input,
-.form-1 .form-control-select {
-	border: 1px solid #39728f;
-	background-color: #2a5d77;
-	color: #fff;
-}
-
-.form-1 .form-control-textarea {
-	border: 1px solid #39728f;
-	background-color: #2a5d77;
-	color: #fff;
-}
-
-.form-1 .form-control-input:focus,
-.form-1 .form-control-input:hover,
-.form-1 .form-control-select:focus,
-.form-1 .form-control-select:hover,
-.form-1 .form-control-textarea:focus,
-.form-1 .form-control-textarea:hover {
-	border: 1px solid #fff;
-}
-
-#lmsgSubmit.h3.text-center.tada.animated,
-#lmsgSubmit.h3.text-center {
-	color: #fff;
-}
-
-.form-1 .help-block.with-errors .list-unstyled {
-	color: #dfe5ec;
-}
+/* SECTION REMOVED */
 
 
 /************************/
@@ -1501,85 +1187,8 @@ input[type='checkbox'] {
 /********************/
 /*     14. Team     */
 /********************/
-.basic-2 {
-	padding-top: 6.375rem;
-	padding-bottom: 3.375rem;
-	background-color: #fbfbfb;
-	text-align: center;
-}
 
-.basic-2 h2 {
-	margin-bottom: 0.75rem;
-}
-
-.basic-2 .team-member {
-	display: inline-block;
-	max-width: 13rem;
-	margin-right: 1.5rem;
-	margin-bottom: 3.5rem;
-	margin-left: 1.5rem;
-}
-
-/* Hover Animation */
-.basic-2 .image-wrapper {
-	overflow: hidden;
-	margin-bottom: 1.5rem;
-}
-
-.basic-2 .image-wrapper img {
-	margin: 0;
-	transition: all 0.3s;
-}
-
-.basic-2 .image-wrapper:hover img {
-	-moz-transform: scale(1.15);
-	-webkit-transform: scale(1.15);
-	transform: scale(1.15);
-} 
-/* end of hover animation */
-
-.basic-2 .team-member .p-large {
-	margin-bottom: 0.25rem;
-}
-
-.basic-2 .team-member .job-title {
-	margin-bottom: 0.75rem;
-	color: #484a46;
-	font: 700 1rem/1.375rem "Montserrat", sans-serif;
-}
-
-.basic-2 .fa-stack {
-	width: 1.75rem;
-	height: 1.75rem;
-	margin-right: 0.125rem;
-	margin-left: 0.125rem;
-}
-
-.basic-2 .fa-stack .hexagon {
-	position: absolute;
-	left: 0;
-	width: 1.75rem;
-	height: 1.75rem;
-	background: url('../images/hexagon-green.svg') center center no-repeat;
-	background-size: 1.75rem 1.75rem;
-	transition: all 0.2s ease;
-}
-
-.basic-2 .fa-stack:hover .hexagon {
-	background: url('../images/hexagon-white.svg') center center no-repeat;
-	background-size: 1.75rem 1.75rem;
-}
-
-.basic-2 .fa-stack-1x {
-	font-size: 0.6875rem;
-	line-height: 1.75rem;
-	color: #fff;
-	transition: all 0.2s ease;
-}
-
-.basic-2 .fa-stack:hover .fa-stack-1x {
-	color: #ff69b4;
-}
+/* SECTION REMOVED */
 
 
 /*********************/
@@ -1988,30 +1597,6 @@ a:hover.back-to-top {
 	/* end of header */
 
 
-	/* Details 1 */
-	.accordion .accordion-container {
-		max-width: 70%;
-	}
-	/* end of details 1 */
-
-
-	/* Details 2 */
-	.tabs .tabs-container {
-		max-width: 70%;
-	}
-
-	.tabs #tab-2 .list-unstyled {
-		display: inline-block;
-		width: 45%;
-		margin-top: 0;
-	}
-	
-	.tabs #tab-2 .list-unstyled.first {
-		margin-right: 2rem;
-	}
-	/* end of details 2 */
-
-
 	/* Testimonials */
 	.slider .swiper-button-prev {
 		left: 1rem;
@@ -2169,92 +1754,6 @@ a:hover.back-to-top {
 	/* end of description */
 
 
-	/* Services */
-	.cards-2 .card {
-		max-width: 18.25rem;
-		display: inline-block;
-		vertical-align: top;
-	}
-
-	.cards-2 .col-lg-12 div.card:nth-child(3n+2) {
-		margin-right: 1.25rem;
-		margin-left: 1.25rem;
-	}
-	/* end of services */
-
-
-	/* Details 1 */
-	.accordion {
-		height: 34.625rem;
-	}
-	
-	.accordion .area-1 {
-		width: 50%;
-		height: 100%;
-		display: inline-block;
-	}
-	
-	.accordion .area-2 {
-		width: 50%;
-		height: 100%;
-		display: inline-block;
-		vertical-align: top;
-	}
-	
-	.accordion .accordion-container {
-		max-width: 88%;
-		margin-left: 2rem;
-		padding-bottom: 0;
-	}
-
-	.accordion .accordion-title {
-		width: 85%;
-	}
-	/* end of details 1 */
-
-
-	/* Details 2 */
-	.tabs {
-		height: 36.125rem;
-	}
-
-	.tabs .area-1 {
-		width: 50%;
-		height: 100%;
-		display: inline-block;
-		vertical-align: top;
-	}
-
-	.tabs .area-2 {
-		width: 50%;
-		height: 100%;
-		display: inline-block;
-	}
-
-	.tabs .tabs-container {
-		max-width: 88%;
-		margin-left: 2rem;
-		padding-top: 6.75rem;
-		padding-bottom: 0;
-	}
-
-	.tabs .nav-tabs {
-		justify-content: flex-start;
-	}
-	/* end of details 2 */
-
-
-	/* Call Me */
-	.form-1 {
-		padding-top: 7rem;	
-	}
-
-	.form-1 .text-container {
-		margin-bottom: 0;
-	}
-	/* end of call me */
-
-
 	/* Project Lightboxes */
 	.lightbox-basic img {
 		margin-bottom: 0;
@@ -2269,16 +1768,6 @@ a:hover.back-to-top {
 		margin-bottom: 0;
 	}
 	/* end of project lightboxes */
-
-
-	/* Team */
-	.basic-2 .team-member {
-		width: 12.75rem;
-		max-width: 100%;
-		margin-right: 0.75rem;
-		margin-left: 0.75rem;
-	}
-	/* end of team */
 
 
 	/* About */
@@ -2364,57 +1853,6 @@ a:hover.back-to-top {
 	/* end of description */
 
 
-	/* Services */
-	.cards-2 .card {
-		max-width: 20.875rem;
-	}
-
-	.cards-2 .card-body {
-		padding: 2.25rem 2.5rem 2.125rem 2.5rem;
-	}
-
-	.cards-2 .col-lg-12 div.card:nth-child(3n+2) {
-		margin-right: 3rem;
-		margin-left: 3rem;
-	}
-	/* end of services */
-
-
-	/* Details 1 */
-	.accordion .accordion-container {
-		max-width: 28rem;
-		margin-left: 5rem;
-	}
-	/* end of details 1 */
-
-
-	/* Details 2 */
-	.tabs .tabs-container {
-		max-width: 28rem;
-		margin-right: 5rem;
-		margin-left: auto;
-	}
-
-	.tabs #tab-2 .media-wrapper.first {
-		margin-right: 2rem;
-	}
-	/* end of details 2 */
-
-
-	/* Call Me */
-	.form-1 .text-container {
-		margin-top: 1.375rem;
-		margin-right: 1.75rem;
-		margin-left: 3rem
-	}
-
-	.form-1 form {
-		margin-left: 1.75rem;
-		margin-right: 3rem
-	}
-	/* end of call me */
-
-
 	/* Projects */
 	.filter .element-item {
 		width: 17.3125rem; /* to eliminate grid overflow problem on hard refresh */
@@ -2425,15 +1863,6 @@ a:hover.back-to-top {
 		top: 45%;
 	}
 	/* end of projects */
-
-
-	/* Team */
-	.basic-2 .team-member {
-		width: 14.375rem;
-		margin-right: 1.375rem;
-		margin-left: 1.375rem;
-	}
-	/* end of team */
 
 
 	/* About */
